Fixed some layout bugs

--- a/bem/colored-link.css
+++ b/bem/colored-link.css
@@ -19,7 +19,7 @@
 	padding: 9px 0 12px 0;
 }
 .colored-link_red:hover {
-	background: #ff161c;
+	background: #f3292e;
 	color: #fff;
 	text-decoration: none;
 }
